[gd_scene load_steps=8 format=3 uid="uid://db2dm0pykjtd5"]

[ext_resource type="Texture2D" uid="uid://c1g62negw4tr4" path="res://Assets/PausePhoto.jpg" id="1_7gl4a"]
[ext_resource type="Script" path="res://Scenes/Buttons/pause_button.gd" id="1_7oeby"]
[ext_resource type="Texture2D" uid="uid://nga0pw4w6jbo" path="res://Assets/GamePausedLabel.jpg" id="3_2dikv"]
[ext_resource type="PackedScene" uid="uid://1ffauvcsbr4o" path="res://Scenes/Buttons/back_button.tscn" id="4_4yfry"]
[ext_resource type="Texture2D" uid="uid://bx7jk12mn1e1q" path="res://Assets/BackButton.jpg" id="5_nocd0"]
[ext_resource type="Texture2D" uid="uid://cn4pnknqlxiou" path="res://Assets/Quit Photo.jpg" id="6_v36bh"]
[ext_resource type="AudioStream" uid="uid://c5a0yv5kmul22" path="res://Audio/NumberSound.mp3" id="7_c24bp"]

[node name="PauseButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = 58.0
offset_right = -2106.0
offset_bottom = -844.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7oeby")

[node name="Photo" type="Sprite2D" parent="."]
position = Vector2(99, 89)
scale = Vector2(0.148103, 0.134152)
texture = ExtResource("1_7gl4a")

[node name="PauseMenu" type="Sprite2D" parent="."]
position = Vector2(1218, 505)
scale = Vector2(0.304734, 0.300998)
texture = ExtResource("3_2dikv")

[node name="BackButton" parent="PauseMenu" instance=ExtResource("4_4yfry")]
offset_left = -889.299
offset_top = -558.143
offset_right = 797.701
offset_bottom = 2.8573

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu/BackButton"]
position = Vector2(846.456, 279.516)
scale = Vector2(0.647735, 0.449674)
texture = ExtResource("5_nocd0")

[node name="QuitButton" parent="PauseMenu" instance=ExtResource("4_4yfry")]
offset_left = -889.299
offset_top = 39.8673
offset_right = 797.701
offset_bottom = 600.867

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu/QuitButton"]
position = Vector2(843.357, 285.716)
scale = Vector2(0.636396, 0.449674)
texture = ExtResource("6_v36bh")

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_c24bp")
volume_db = 19.591
pitch_scale = 4.0

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="PauseMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
